--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,11 @@ license = "GPL-3.0-only"
 publish = false
 
 [dependencies]
+anyhow = "1"
 argh = "0.1"
-frost = { package = "frost-secp256k1", version = "2" }
+frost = { package = "frost-secp256k1", version = "2", features = ["serialization"] }
+glob = "0.3"
 k256 = "0.13"
+postcard = "1"
 rand = "0.8"
 sha3 = "0.10"
