--- a/foundry.toml
+++ b/foundry.toml
@@ -6,3 +6,7 @@ out = "target/foundry"
 cache_path = "target/foundry/cache"
 
 solc_version = "0.8.29"
+evm_version = "cancun"
+optimizer = true
+optimizer_runs = 1000000
+via_ir = true
